--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.mdx
@@ -1,4 +1,5 @@
 import { Meta, Story, Canvas } from "@storybook/blocks";
+import { Figma } from "@storybook/addon-designs/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 import * as BreadcrumbStories from "./breadcrumb.stories";
 
@@ -25,6 +26,8 @@ Breadcrumbs are a horizontal list of links used to indicate the current page loc
 <Canvas>
   <Story of={BreadcrumbStories.Breadcrumb} autoplay />
 </Canvas>
+
+<Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-UQ-component-library?type=design&node-id=6045-7038&mode=design&t=8G1CIvJ297Ruw5u5-4" />
 
 ### Truncation
 
