--- a/packages/storybook-html/stories/components/footer/footer.mdx
+++ b/packages/storybook-html/stories/components/footer/footer.mdx
@@ -29,9 +29,7 @@ The footer consists of five main sections.
   <Story of={FooterStories.footer} />
 </Canvas>
 
-<Figma
-  url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-UQ-component-library?type=design&node-id=3853-2229&mode=design&t=8G1CIvJ297Ruw5u5-4"
-/>
+<Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-UQ-component-library?type=design&node-id=3853-2229&mode=design&t=8G1CIvJ297Ruw5u5-4" />
 
 ## When and how to use
 
