--- a/packages/storybook-html/stories/components/header/header.mdx
+++ b/packages/storybook-html/stories/components/header/header.mdx
@@ -1,4 +1,5 @@
 import { Meta, Story, Canvas } from "@storybook/blocks";
+import { Figma } from "@storybook/addon-designs/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 import * as HeaderStories from "./header.stories";
 import { background } from "@storybook/theming";
@@ -30,6 +31,8 @@ The interim header is suitable for a broad range of sites and applications, it i
   <Story of={HeaderStories.HeaderInterim} />
 </Canvas>
 
+<Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-UQ-component-library?type=design&node-id=3850-1973&mode=design&t=8G1CIvJ297Ruw5u5-4" />
+
 ### Header with mega menu
 
 Currently reserved for the UQ Homepage and level one landing pages for Study, Research, Partners & community and about.
@@ -40,6 +43,8 @@ Currently reserved for the UQ Homepage and level one landing pages for Study, Re
 <Canvas withToolbar>
   <Story height="300px" of={HeaderStories.Header} />
 </Canvas>
+
+<Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-UQ-component-library?type=design&node-id=3849-1521&mode=design&t=8G1CIvJ297Ruw5u5-4" />
 
 ### Usage
 
