--- a/packages/storybook-html/stories/components/header/header.mdx
+++ b/packages/storybook-html/stories/components/header/header.mdx
@@ -31,7 +31,7 @@ The interim header is suitable for a broad range of sites and applications, it i
   <Story of={HeaderStories.HeaderInterim} />
 </Canvas>
 
-<Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-UQ-component-library?type=design&node-id=3850-1973&mode=design&t=8G1CIvJ297Ruw5u5-4" />
+<Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-UQ-component-library?type=design&node-id=6126-4623&mode=design&t=1ihpAR7SlIXznVw1-4" />
 
 ### Header with mega menu
 
@@ -44,7 +44,7 @@ Currently reserved for the UQ Homepage and level one landing pages for Study, Re
   <Story height="300px" of={HeaderStories.Header} />
 </Canvas>
 
-<Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-UQ-component-library?type=design&node-id=3849-1521&mode=design&t=8G1CIvJ297Ruw5u5-4" />
+<Figma url="https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/One-UQ-component-library?type=design&node-id=6126-4623&mode=design&t=1ihpAR7SlIXznVw1-4" />
 
 ### Usage
 
