fix: clean up stories

--- a/packages/storybook-html/stories/components/button/button.mdx
+++ b/packages/storybook-html/stories/components/button/button.mdx
@@ -22,24 +22,24 @@ The button component is used to make common actions more obvious and help users 
 
 The default button style used for the primary action on a page, eg. a submit button on a form. This should generally only be used once per view.
 
-<Canvas>
-  <Story id="components-button--primary" width={300} />
+<Canvas sourceState="hidden">
+  <Story of={ButtonStories.primary} />
 </Canvas>
 
 ### Secondary
 
 A button style used alongside the default primary button to highlight an important action, eg. a save button on a form.
 
-<Canvas>
-  <Story id="components-button--secondary" />
+<Canvas sourceState="hidden">
+  <Story of={ButtonStories.secondary} />
 </Canvas>
 
 ### Tertiary
 
 A demphasied button style used for tertiary actions on a page, eg a Cancel button on a form.
 
-<Canvas>
-  <Story id="components-button--tertiary" />
+<Canvas sourceState="hidden">
+  <Story of={ButtonStories.tertiary} />
 </Canvas>
 
 ### Size
