--- a/packages/storybook-html/stories/components/blockquote/blockquote.mdx
+++ b/packages/storybook-html/stories/components/blockquote/blockquote.mdx
@@ -7,17 +7,7 @@ import { background } from "@storybook/theming";
 
 # Blockquote
 
-<StatusBadge.Stable />
-
-<StatusBadge.StableDoc />
-
-<a
-  href="https://github.com/uq-its-ss/design-system/issues"
-  class="uq-button uq-button--text"
-  target="_blank"
->
-  Check for open issues
-</a>
+<StatusBadge.Stable /> <StatusBadge.StableDoc /> [Check for open issues](https://github.com/uq-its-ss/design-system/issues)
 
 ## Overview
 
