--- a/packages/storybook-html/stories/components/table/table.mdx
+++ b/packages/storybook-html/stories/components/table/table.mdx
@@ -6,7 +6,8 @@ import * as TableStories from "./table.stories";
 
 # Table
 
-<StatusBadge.Review />  <StatusBadge.ReviewDoc />  [Check for open issues](https://github.com/uq-its-ss/design-system/issues)
+<StatusBadge.Review /> <StatusBadge.ReviewDoc /> [Check for open
+issues](https://github.com/uq-its-ss/design-system/issues)
 
 ## Overview
 
