--- a/packages/storybook-html/stories/components/blockquote/blockquote.mdx
+++ b/packages/storybook-html/stories/components/blockquote/blockquote.mdx
@@ -7,7 +7,8 @@ import { background } from "@storybook/theming";
 
 # Blockquote
 
-<StatusBadge.Stable /> <StatusBadge.StableDoc /> [Check for open issues](https://github.com/uq-its-ss/design-system/issues)
+<StatusBadge.Stable /> <StatusBadge.StableDoc /> [Check for open
+issues](https://github.com/uq-its-ss/design-system/issues)
 
 ## Overview
 
