--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.mdx
@@ -6,7 +6,8 @@ import * as BreadcrumbStories from "./breadcrumb.stories";
 
 # Breadcrumb
 
-<StatusBadge.Stable />  <StatusBadge.StableDoc />  [Check for open issues](https://github.com/uq-its-ss/design-system/issues)
+<StatusBadge.Stable /> <StatusBadge.StableDoc /> [Check for open
+issues](https://github.com/uq-its-ss/design-system/issues)
 
 ## Overview
 
