--- a/packages/storybook-html/stories/components/card/card.mdx
+++ b/packages/storybook-html/stories/components/card/card.mdx
@@ -6,7 +6,8 @@ import * as CardStories from "./card.stories";
 
 # Card
 
-<StatusBadge.Review />  <StatusBadge.ReviewDoc />  [Check for open issues](https://github.com/uq-its-ss/design-system/issues)
+<StatusBadge.Review /> <StatusBadge.ReviewDoc /> [Check for open
+issues](https://github.com/uq-its-ss/design-system/issues)
 
 ## Overview
 
