--- a/packages/storybook-html/stories/components/site-header/site-header.mdx
+++ b/packages/storybook-html/stories/components/site-header/site-header.mdx
@@ -6,7 +6,8 @@ import * as SiteHeaderStories from "./site-header.stories";
 
 # Site header
 
-<StatusBadge.Stable />  <StatusBadge.StableDoc />  [Check for open issues](https://github.com/uq-its-ss/design-system/issues)
+<StatusBadge.Stable /> <StatusBadge.StableDoc /> [Check for open
+issues](https://github.com/uq-its-ss/design-system/issues)
 
 ## Overview
 
