--- a/packages/storybook-html/stories/components/tabs/tabs.mdx
+++ b/packages/storybook-html/stories/components/tabs/tabs.mdx
@@ -6,7 +6,8 @@ import * as TabsStories from "./tabs.stories";
 
 # Tabs
 
-<StatusBadge.Review />  <StatusBadge.ReviewDoc />  [Check for open issues](https://github.com/uq-its-ss/design-system/issues)
+<StatusBadge.Review /> <StatusBadge.ReviewDoc /> [Check for open
+issues](https://github.com/uq-its-ss/design-system/issues)
 
 ## Overview
 
