--- a/packages/storybook-html/templates/component.mdx
+++ b/packages/storybook-html/templates/component.mdx
@@ -3,7 +3,10 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 # Component name
 
-<StatusBadge.Development />  [Check for open issues](https://github.com/uq-its-ss/design-system/issues)<StatusBadge.Experiment /> <StatusBadge.Stable /> <StatusBadge.Review /> <StatusBadge.Deprecated />   [Check for open issues](https://github.com/uq-its-ss/design-system/issues)
+<StatusBadge.Development /> [Check for open
+issues](https://github.com/uq-its-ss/design-system/issues)
+<StatusBadge.Experiment /> <StatusBadge.Stable /> <StatusBadge.Review /> <StatusBadge.Deprecated /> [Check
+for open issues](https://github.com/uq-its-ss/design-system/issues)
 
 ## Overview
 
