docs: add card documentation

--- a/packages/storybook-html/stories/introduction/get-started.mdx
+++ b/packages/storybook-html/stories/introduction/get-started.mdx
@@ -114,7 +114,7 @@ to [choose Dart Sass (`sass`) as the preprocessor (as opposed to `node-sass`)][7
 ```javascript
 // module.js
 
-import "@uqds/button/src/scss/_component.scss";
+import "design-system/packages/button/src/scss/_component.scss";
 ```
 
 ### JavaScript library
