--- a/packages/storybook-html/stories/layout/page-layouts/sidebar/sidebar.mdx
+++ b/packages/storybook-html/stories/layout/page-layouts/sidebar/sidebar.mdx
@@ -41,33 +41,8 @@ provide correct **section spacing**.
 
 ### Examples
 
-#### Sidebar layout with sections and card grids
+#### Sidebar layout with Local Nav, sections and card grids
 
 <Canvas>
-  <div class="uqds-layout-demo-bg">
-    <div class="uq-container">
-      <div class="uq-sidebar-layout">
-        <div class="uq-sidebar-layout__sidebar">
-          <div class="uqds-layout-demo-el"></div>
-        </div>
-        <div class="uq-sidebar-layout__main">
-          <div class="uq-sections">
-            <div class="uqds-layout-demo-el"></div>
-            <div class="uq-card-grid uq-card-grid--target-3x">
-              <div class="uqds-layout-demo-el"></div>
-              <div class="uqds-layout-demo-el"></div>
-              <div class="uqds-layout-demo-el"></div>
-            </div>
-            <div class="uqds-layout-demo-el"></div>
-            <div class="uq-card-grid uq-card-grid--target-2x">
-              <div class="uqds-layout-demo-el"></div>
-              <div class="uqds-layout-demo-el"></div>
-              <div class="uqds-layout-demo-el"></div>
-              <div class="uqds-layout-demo-el"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <Story of={SidebarStories.LocalNavExample} />
 </Canvas>
