fix: updated Footer, added autoplay to mdx

--- a/packages/storybook-html/stories/components/alert/alert.mdx
+++ b/packages/storybook-html/stories/components/alert/alert.mdx
@@ -298,7 +298,7 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 ### Loaded from an external API
 
 <Canvas>
-  <Story of={AlertStories.loadedFromExternalUri} />
+  <Story of={AlertStories.loadedFromExternalUri} autoplay />
 </Canvas>
 
 ```html
