--- a/packages/storybook-html/stories/components/footer/footer.mdx
+++ b/packages/storybook-html/stories/components/footer/footer.mdx
@@ -25,7 +25,7 @@ The footer consists of five main sections.
 ## Default example
 
 <Canvas withToolbar>
-  <Story of={FooterStories.footer} />
+  <Story of={FooterStories.footer} autoplay />
 </Canvas>
 
 ## When and how to use
