--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-3-wayfinding-controls.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-3-wayfinding-controls.mdx
@@ -32,7 +32,10 @@ scripted behaviour for the [_Material Design_][1] progress indicator. Please see
 code.
 
 <Canvas sourceState="hidden" withToolbar>
-  <Story of={UqMaps3WayfindingControlsStories.wayfindingControlWorking} autoplay />
+  <Story
+    of={UqMaps3WayfindingControlsStories.wayfindingControlWorking}
+    autoplay
+  />
 </Canvas>
 
 [1]: https://material.io/components/progress-indicators#circular-progress-indicators
