--- a/packages/storybook-html/stories/components/tabs/tabs.mdx
+++ b/packages/storybook-html/stories/components/tabs/tabs.mdx
@@ -28,7 +28,7 @@ hierarchical level.
 ### Default / Outline
 
 <Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsOutline} />
+  <Story of={TabsStories.tabsOutline} autoplay />
 </Canvas>
 
 ```html
@@ -104,7 +104,7 @@ hierarchical level.
 ### Minimal
 
 <Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsMinimal} />
+  <Story of={TabsStories.tabsMinimal} autoplay />
 </Canvas>
 
 ```html
@@ -114,7 +114,7 @@ hierarchical level.
 ### Lined
 
 <Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsLined} />
+  <Story of={TabsStories.tabsLined} autoplay />
 </Canvas>
 
 ```html
@@ -124,7 +124,7 @@ hierarchical level.
 ### With icon
 
 <Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsWithIcon} />
+  <Story of={TabsStories.tabsWithIcon} autoplay />
 </Canvas>
 
 ```html
@@ -147,7 +147,7 @@ hierarchical level.
 ### Full width
 
 <Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsFullWidth} />
+  <Story of={TabsStories.tabsFullWidth} autoplay />
 </Canvas>
 
 ```html
@@ -157,7 +157,7 @@ hierarchical level.
 ### Small
 
 <Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsSmall} />
+  <Story of={TabsStories.tabsSmall} autoplay />
 </Canvas>
 
 ```html
@@ -167,7 +167,7 @@ hierarchical level.
 ### Reversed
 
 <Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsReversed} />
+  <Story of={TabsStories.tabsReversed} autoplay />
 </Canvas>
 
 ```html
