fix: updated site Header

--- a/packages/storybook-html/stories/components/site-header/site-header.mdx
+++ b/packages/storybook-html/stories/components/site-header/site-header.mdx
@@ -29,7 +29,7 @@ The site header component is comprised of the site title, the site navigation, a
 A site header with a site title, a site utility, and a two-level site navigation.
 
 <Canvas withToolbar>
-  <Story of={SiteHeaderStories.siteHeaderWithSubnav} />
+  <Story of={SiteHeaderStories.siteHeaderWithSubnav} autoplay />
 </Canvas>
 
 #### Usage
@@ -80,7 +80,7 @@ Slider mobile menu
 A site header with site title and a one-level site navigation.
 
 <Canvas withToolbar>
-  <Story of={SiteHeaderStories.siteHeaderWithoutSubnav} />
+  <Story of={SiteHeaderStories.siteHeaderWithoutSubnav} autoplay />
 </Canvas>
 
 ## Variants
