fix: updated header

--- a/packages/storybook-html/stories/components/header-legacy/header.mdx
+++ b/packages/storybook-html/stories/components/header-legacy/header.mdx
@@ -26,7 +26,7 @@ using [_UQ Search_](https://www.uq.edu.au/search).
 > searching for books or articles in a library database.
 
 <Canvas sourceState="hidden" withToolbar>
-  <Story of={HeaderStories.headerNoLocalSearch} />
+  <Story of={HeaderStories.headerNoLocalSearch} autoplay />
 </Canvas>
 
 ```html
@@ -162,7 +162,7 @@ allow users to choose to search all UQ sites or just the content on your site\*.
 > to use the global header **with global search only**.
 
 <Canvas sourceState="hidden" withToolbar>
-  <Story of={HeaderStories.header} />
+  <Story of={HeaderStories.header} autoplay />
 </Canvas>
 
 ```html
