fix: basci page doc render

--- a/packages/storybook-html/stories/patterns/header-footer/basic-page.mdx
+++ b/packages/storybook-html/stories/patterns/header-footer/basic-page.mdx
@@ -9,5 +9,5 @@ import * as BasicPageStories from "./basic-page.stories";
 <StatusBadge.DraftDoc />
 
 <Canvas sourceState="hidden" withToolbar>
-  <Story of={BasicPageStories.basicPage} />
+  <Story of={BasicPageStories.basicPage} autoplay />
 </Canvas>
