feat!: [ITSADSSD-53170] New cards and panes (#505)
* docs: rearrange dir structure for stories

* docs: deprecate side nav component

* fix: add arrow-right icon

* feat!: New card and story card components

* feat!: new pane component

* fix: improved spacing rules, added styles for cards

* docs: add card documentation

* docs: fix hero image

--- a/packages/storybook-html/stories/components/card/card.mdx
+++ b/packages/storybook-html/stories/components/card/card.mdx
@@ -6,432 +6,37 @@ import * as CardStories from "./card.stories";
 
 # Card
 
-<StatusBadge.Review />
-
-<StatusBadge.ReviewDoc />
-
-<a
-  href="https://github.com/uq-its-ss/design-system/issues"
-  class="uq-button uq-button--text"
-  target="_blank"
->
-  Check for open issues
-</a>
+<StatusBadge.Development />
+<StatusBadge.DraftDoc />
 
 ## Overview
 
-The card component is used to provide a brief summary of content or a task, often with a link to more detail. Cards are frequently displayed alongside other cards to group related content or tasks.
-The height of the cards in a group all equalises by default.
-
-## Default example
-
-> By default, the card component is clickable anywhere on the card and when hovered or active has a shadow but when it contains a text link or a button, it is clickable only on the link or button and drops off the shadow.
-
-### Default card
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.DefaultCard} />
+<Canvas>
+  <Story of={CardStories.Card} />
 </Canvas>
 
-```html
-<div class="uq-card">
-  <a class="uq-card__link" href="#">Card title</a>
-  <div class="uq-card__image-wrapper">
-    <div class="uq-card__image">
-      <img
-        src="/images/card/card-example-st-lucia-campus.jpg"
-        alt="Card image description"
-      />
-    </div>
-  </div>
-  <div class="uq-card__content-wrapper">
-    <div class="uq-card__content">
-      <div class="uq-card__header">
-        <h3 class="uq-card__title">Card title</h3>
-      </div>
-      <div class="uq-card__body">
-        <p>Card summary text</p>
-      </div>
-    </div>
-  </div>
-</div>
-```
+## Variants
 
-### Default card with link or button
+### Text
 
-<Canvas sourceState="hidden">
-  <Story of={CardStories.DefaultCardWithLink} />
+<Canvas>
+  <Story of={CardStories.Text} />
 </Canvas>
 
-```html
-<div class="uq-card">
-  <div class="uq-card__image-wrapper">
-    <div class="uq-card__image">
-      <img
-        src="/images/card/card-example-st-lucia-campus.jpg"
-        alt="Card image description"
-      />
-    </div>
-  </div>
-  <div class="uq-card__content-wrapper">
-    <div class="uq-card__content">
-      <div class="uq-card__header">
-        <h3 class="uq-card__title">Card title</h3>
-      </div>
-      <div class="uq-card__body">
-        <p>Card summary text</p>
-      </div>
-    </div>
-    <div class="uq-card__actions">
-      <a class="text--link" href="#">Learn more</a>
-    </div>
-  </div>
-</div>
-```
+### Image
 
-### Default card variants
-
-#### - Without image
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.DefaultCardNoImage} />
+<Canvas>
+  <Story of={CardStories.Image} />
 </Canvas>
 
-```html
+### Icon
 
-```
-
-#### - Without image, shaded
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.DefaultCardNoImageShaded} />
+<Canvas>
+  <Story of={CardStories.Icon} />
 </Canvas>
 
-```html
-<div class="uq-card uq-card--shaded">...</div>
-```
+### Icon nav
 
-#### - Without image, button
-
-Button variants are restricted to purple and it's outline version.
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.DefaultCardNoImageButton} />
+<Canvas>
+  <Story of={CardStories.IconNav} />
 </Canvas>
-
-```html
-<div class="uq-card">
-  ...
-  <div class="uq-card__content-wrapper">
-    ...
-    <div class="uq-card__actions">
-      <button class="uq-button uq-button--purple" href="#">Learn more</button>
-    </div>
-  </div>
-</div>
-```
-
-#### - Without image, button, shaded
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.DefaultCardNoImageButtonShaded} />
-</Canvas>
-
-```html
-
-```
-
-#### - With image
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.DefaultCardImage} />
-</Canvas>
-
-```html
-
-```
-
-#### - With image, button
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.DefaultCardNoImageButton} />
-</Canvas>
-
-```html
-
-```
-
-## Variant examples
-
-### Story card
-
-For story card, the sub-title is grey in colour, 16px, normal weight 400 and is placed above the card title.
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.StoryCard} />
-</Canvas>
-
-```html
-<div class="uq-card uq-card--story">
-  <a class="uq-card__link" href="#">Card title</a>
-  <div class="uq-card__image-wrapper">
-    <div class="uq-card__image">
-      <img
-        src="/images/card/card-example-gatton-campus.jpg"
-        alt="Card image description"
-      />
-    </div>
-  </div>
-  <div class="uq-card__content-wrapper">
-    <div class="uq-card__content">
-      <div class="uq-card__header">
-        <p class="uq-card__title-super uq-card__title-super--grey">SUB-TITLE</p>
-        <h3 class="uq-card__title">Card title</h3>
-      </div>
-    </div>
-    <div class="uq-card__actions">
-      <p>3 min read</p>
-    </div>
-  </div>
-</div>
-```
-
-### Event card
-
-For event card, the sub-title is purple-light in colour, 16px, medium weight 500 and is placed above the card title.
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.EventCard} />
-</Canvas>
-
-```html
-<div class="uq-card uq-card--event">
-  <a class="uq-card__link" href="#">Card title</a>
-  <div class="uq-card__image-wrapper">
-    <div class="uq-card__image">
-      <img
-        src="/images/card/card-example-herston-campus.jpg"
-        alt="Card image description"
-      />
-    </div>
-  </div>
-  <div class="uq-card__content-wrapper">
-    <div class="uq-card__content">
-      <div class="uq-card__header">
-        <p class="uq-card__title-super">DD MONTH</p>
-        <h3 class="uq-card__title">Card title</h3>
-      </div>
-    </div>
-    <div class="uq-card__actions">
-      <p>Online</p>
-    </div>
-  </div>
-</div>
-```
-
-## Layouts
-
-### Default card layouts
-
-#### - 1 col
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.DefaultCard1Col} />
-</Canvas>
-
-#### - 2 col
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.DefaultCard2Col} />
-</Canvas>
-
-#### - 3 col
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.DefaultCard3Col} />
-</Canvas>
-
-#### - 4 col
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.DefaultCard4Col} />
-</Canvas>
-
-### Story card layouts
-
-#### - 1 col
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.StoryCard1Col} />
-</Canvas>
-
-#### - 2 col
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.StoryCard2Col} />
-</Canvas>
-
-#### - 3 col
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.StoryCard3Col} />
-</Canvas>
-
-#### - 4 col
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.StoryCard4Col} />
-</Canvas>
-
-### Event card layouts
-
-#### - 1 col
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.EventCard1Col} />
-</Canvas>
-
-#### - 2 col
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.EventCard2Col} />
-</Canvas>
-
-#### - 3 col
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.EventCard3Col} />
-</Canvas>
-
-#### - 4 col
-
-<Canvas sourceState="hidden">
-  <Story of={CardStories.EventCard4Col} />
-</Canvas>
-
-## How & when to use
-
-<table className="uqds-table  uqds-table--card uqds-table--colour">
-  <tbody className="uqds-table__body">
-    <tr className="uqds-table__mobile-heading">
-      <th className="uqds-table__heading" width="20%">
-        Viewport
-      </th>
-
-      <th className="uqds-table__heading" width="20%">
-        Number of columns
-      </th>
-
-      <th className="uqds-table__heading" width="20%">
-        Default card
-      </th>
-
-      <th className="uqds-table__heading" width="20%">
-        Story card
-      </th>
-
-      <th className="uqds-table__heading" width="20%">
-        Event card
-      </th>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item" data-title="Viewport">
-        Desktop
-      </td>
-
-      <td className="uqds-table__item" data-title="Number of columns">
-        1 col
-      </td>
-
-      <td className="uqds-table__item" data-title="Default card">
-        Align image & content: <br /> horizontal
-      </td>
-
-      <td className="uqds-table__item" data-title="Story card">
-        Align image & content: <br /> horizontal
-      </td>
-
-      <td className="uqds-table__item" data-title="Event card">
-        Align image & content: <br /> horizontal
-      </td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item" data-title="Viewport">
-        Desktop
-      </td>
-
-      <td className="uqds-table__item" data-title="Number of columns">
-        2,3,4 col
-      </td>
-
-      <td className="uqds-table__item" data-title="Default card">
-        Align image & content: <br /> vertical
-      </td>
-
-      <td className="uqds-table__item" data-title="Story card">
-        Align image & content: <br /> vertical
-      </td>
-
-      <td className="uqds-table__item" data-title="Event card">
-        Align image & content: <br /> vertical
-      </td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item" data-title="Viewport">
-        Mobile
-      </td>
-
-      <td className="uqds-table__item" data-title="Number of columns">
-        1,2 col
-      </td>
-
-      <td className="uqds-table__item" data-title="Default card">
-        Align image & content: <br /> vertical ~
-      </td>
-
-      <td className="uqds-table__item" data-title="Story card">
-        Align image & content: <br /> vertical ~
-      </td>
-
-      <td className="uqds-table__item" data-title="Event card">
-        Align image & content: <br /> vertical ~
-      </td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item" data-title="Viewport">
-        Mobile
-      </td>
-
-      <td className="uqds-table__item" data-title="Number of columns">
-        3,4 col
-      </td>
-
-      <td className="uqds-table__item" data-title="Default card">
-        Align image & content: <br /> vertical ~
-      </td>
-
-      <td className="uqds-table__item" data-title="Story card">
-        Align image & content: <br /> list \*\*
-      </td>
-
-      <td className="uqds-table__item" data-title="Event card">
-        Align image & content: <br /> list \*\*
-      </td>
-    </tr>
-
-  </tbody>
-</table>
-
-### Special rules
-
-\~ On smaller viewports, image height is reduced to 190px for 1,2 column story/event cards and 1,2,3,4 column default cards. <br />
-\*\* On smaller viewports, image height remain fixed at 98px for story/event cards.
-
-## Accessibility
-
-- With keyboard accessibility, tabbing takes the user through the links in the card.
-- With assistive technologies like screen readers, it reads out the heading level, title, text and links in the card.
