--- a/packages/storybook-html/stories/components/card/card.mdx
+++ b/packages/storybook-html/stories/components/card/card.mdx
@@ -83,7 +83,7 @@ The height of the cards in a group all equalises by default.
       </div>
     </div>
     <div class="uq-card__actions">
-      <a class="text--link" href="#">Learn more</a>
+      <a href="#">Learn more</a>
     </div>
   </div>
 </div>
