chore: added open issues link to card doc

--- a/packages/storybook-html/stories/components/card/card.mdx
+++ b/packages/storybook-html/stories/components/card/card.mdx
@@ -8,6 +8,8 @@ import * as CardStories from "./card.stories";
 
 <StatusBadge.Development />
 <StatusBadge.DraftDoc />
+[Check for open
+issues](https://github.com/uq-its-ss/design-system/issues)
 
 ## Overview
 
