fix: ITSADSSD-54682 Typography updates (#489)
* fix: update heading color to grey--900

* fix: add option for showcase. add link to basic page example for testing

* doco: update typorgraphy doco

* doco: remove references to

* fix: replace all  variable references with -900

* fix: replace  variable with -500

* fix: replace -hover and -active shorthand variables with -600

* feat: add letter-spacing variable and apply to all text

* feat: increase default line-height to 1.6

* fix: global letter-spacing rule changed to wild card to avoid form elements not inheriting

--- a/packages/storybook-html/stories/components/core/typography.mdx
+++ b/packages/storybook-html/stories/components/core/typography.mdx
@@ -188,7 +188,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xxxxl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td> 
-      <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><h1>This is a H1 heading</h1></td> 
     </tr>
 
@@ -198,7 +198,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xxxl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><h2>This is a H2 heading</h2></td>
     </tr>
 
@@ -208,7 +208,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xxl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><h3>This is a H3 heading</h3></td>
     </tr>
 
@@ -218,7 +218,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><h4>This is a H4 heading</h4></td>
     </tr>
 
@@ -228,7 +228,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><h5>This is a H5 heading</h5></td>
     </tr>
 
@@ -238,7 +238,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><h6>This is a H6 heading</h6></td>
     </tr>
 
@@ -248,7 +248,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><p class="uqds-font--lead">This is lead paragraph text</p></td>
     </tr>
 
@@ -258,7 +258,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><p>This is paragraph text</p></td>
     </tr>
 
@@ -268,7 +268,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-s</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><p class="uqds-font--small">This is small paragraph text</p></td>
     </tr>
 
@@ -278,17 +278,17 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xs</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><p class="uqds-font--xsmall">This is extra small paragraph text</p></td>
     </tr>
 
     <tr className="uqds-table__row">
       <td className="uqds-table__item">Link</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
+      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$link</td>
+      <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
       <td className="uqds-table__item" data-title="Example"><a href="">This is a link</a></td>
     </tr>
 
@@ -298,7 +298,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><ol><li>This is an ordered list item</li></ol></td>
     </tr>
 
@@ -308,7 +308,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><ul><li>This is an unordered list item</li></ul></td>
     </tr>
 
@@ -318,7 +318,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-s</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><label>This is a label</label></td>
     </tr>
 
@@ -328,7 +328,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$text</td>
+      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
       <td className="uqds-table__item" data-title="Example"><blockquote>This is a blockquote</blockquote></td>
     </tr>
 
